Finished Styling the Sidebar. | Update #5 |

--- a/index.html
+++ b/index.html
@@ -61,8 +61,55 @@
             <!-- SIDEBAR NAVIGATION STARTS -->
             <div class="content">
                 <nav class="sidebar">
-                    Navigation
+                    <ul class="side-nav">
+                        <!-- SIDE NAVIGATION 1 -->
+                        <li class="side-nav__item side-nav__item--active">  <!-- --ACTIVE CLASS NAME MAKES THE ELEMENT ALREADY SELECTED. STYLED IN SASS/CSS3 -->
+                            <a href="#" class="side-nav__link">
+                                <svg class="side-nav__icon">
+                                    <use xlink:href="resources/images/sprite.svg#icon-home"></use>
+                                </svg>
+                                <span>Hotel</span>
+                            </a>
+                        </li>
+
+                        <!-- SIDE NAVIGATION 2 -->
+                        <li class="side-nav__item">
+                            <a href="#" class="side-nav__link">
+                                <svg class="side-nav__icon">
+                                    <use xlink:href="resources/images/sprite.svg#icon-aircraft-take-off"></use>
+                                </svg>
+                                <span>Flight</span>
+                            </a>
+                        </li>
+
+                        <!-- SIDE NAVIGATION 3 -->
+                        <li class="side-nav__item">
+                            <a href="#" class="side-nav__link">
+                                <svg class="side-nav__icon">
+                                    <use xlink:href="resources/images/sprite.svg#icon-key"></use>
+                                </svg>
+                                <span>Car Rental</span>
+                            </a>
+                        </li>
+
+                        <!-- SIDE NAVIGATION 4 -->
+                        <li class="side-nav__item">
+                            <a href="#" class="side-nav__link">
+                                <svg class="side-nav__icon">
+                                    <use xlink:href="resources/images/sprite.svg#icon-map"></use>
+                                </svg>
+                                <span>Tours</span>
+                            </a>
+                        </li>
+                    </ul>
+
+                    <div class="legal">
+                        &copy; 2018 by Trillo. All rights reserved.
+                    </div>
                 </nav>
+
+
+
                 <main class="hotel-view">
                     Hotel View
                 </main>
