--- a/index.html
+++ b/index.html
@@ -107,11 +107,59 @@
                         &copy; 2018 by Trillo. All rights reserved.
                     </div>
                 </nav>
+                <!-- SIDEBAR NAVIGATION ENDS -->
 
-
-
+                <!-- HOTEL VIEW - GALLERY -->
                 <main class="hotel-view">
-                    Hotel View
+                    <div class="gallery">
+                        <figure class="gallery__item">
+                            <img src="resources/images/hotel-1.jpg" alt="Hotel 1" class="gallery__photo">
+                        </figure>
+                        <figure class="gallery__item">
+                            <img src="resources/images/hotel-2.jpg" alt="Hotel 2" class="gallery__photo">
+                        </figure>
+                        <figure class="gallery__item">
+                            <img src="resources/images/hotel-3.jpg" alt="Hotel 3" class="gallery__photo">
+                        </figure>
+                    </div>
+                    <!-- HOTEL VIEW - GALLERY -->
+
+                    <!-- HOTEL VIEW - OVERVIEW -->
+                    <div class="overview">
+                        <h1 class="overview__heading">Hotel Las Palmas</h1>
+                        <div class="overview__stars">
+                            <svg class="overview__icon-star">
+                                <use xlink:href="resources/images/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="resources/images/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="resources/images/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="resources/images/sprite.svg#icon-star"></use>
+                            </svg>
+                            <svg class="overview__icon-star">
+                                <use xlink:href="resources/images/sprite.svg#icon-star"></use>
+                            </svg>
+                        </div>
+
+                        <!-- HOTEL VIEW - OVERVIEW | LOCATION -->
+                        <div class="overview__location">
+                            <svg class="overview__icon-location">
+                                <use xlink:href="resources/images/sprite.svg#icon-location-pin"></use>
+                            </svg>
+                            <button class="btn-inline">Albufeira, Portugal</button>
+                        </div>
+
+                        <!-- HOTEL VIEW - OVERVIEW | RATING -->
+                        <div class="overview__rating">
+                            <div class="overview__rating-average">8.6</div>
+                            <div class="overview__rating-count">429 votes</div>
+                        </div>
+                    </div>
+                    <!-- HOTEL VIEW - OVERVIEW -->
                 </main>
             </div>
             <!-- SIDEBAR NAVIGATION ENDS -->
