Finished Building The hotel description section/part | Update #7 |

--- a/index.html
+++ b/index.html
@@ -159,6 +159,46 @@
                             <div class="overview__rating-count">429 votes</div>
                         </div>
                     </div>
+
+                    <div class="detail">
+                        <div class="description">
+                            <p class="paragraph">
+                                A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. 
+                                I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, 
+                                so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.
+                            </p>
+                            <p class="paragraph">
+                                A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of 
+                                existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, 
+                                that I neglect my talents.
+                            </p>
+                            <ul class="list">
+                                <li class="list__item">Close To The Beach</li>
+                                <li class="list__item">Breakfast Included</li>
+                                <li class="list__item">Free Airport Shuttle</li>
+                                <li class="list__item">Free Wifi In All Room</li>
+                                <li class="list__item">Air Conditioning And Heating</li>
+                                <li class="list__item">Pets Allowed</li>
+                                <li class="list__item">We Speak All Languages</li>
+                                <li class="list__item">Perfect For Families</li>
+                            </ul>
+                            <div class="recommend">
+                                <p class="recommend__count">
+                                    Lucy and 3 other friends recommend this hotel.
+                                </p>
+                            <div class="recommend__friends">
+                                <img src="resources/images/user-3.jpg" alt="User 1" class="recommend__photo">
+                                <img src="resources/images/user-4.jpg" alt="User 2" class="recommend__photo">
+                                <img src="resources/images/user-5.jpg" alt="User 3" class="recommend__photo">
+                                <img src="resources/images/user-6.jpg" alt="User 4" class="recommend__photo">
+                            </div>
+                            </div>
+                        </div>
+                        <div class="user-reviews">
+                            User Reviews
+                        </div>
+                    </div>
+
                     <!-- HOTEL VIEW - OVERVIEW -->
                 </main>
             </div>
