Made Website responsive for most of the devices. | Update #8 |

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
                         </div>
                     </div>
 
+                    <!-- DETAILS ABOUT THE HOTEL STARTS -->
                     <div class="detail">
                         <div class="description">
                             <p class="paragraph">
@@ -182,6 +183,8 @@
                                 <li class="list__item">We Speak All Languages</li>
                                 <li class="list__item">Perfect For Families</li>
                             </ul>
+
+                            <!-- FRIENDS RECOMMENDATIONS -->
                             <div class="recommend">
                                 <p class="recommend__count">
                                     Lucy and 3 other friends recommend this hotel.
@@ -194,15 +197,67 @@
                             </div>
                             </div>
                         </div>
-                        <div class="user-reviews">
-                            User Reviews
-                        </div>
-                    </div>
+                        <!-- DETAILS ABOUT THE HOTEL ENDS -->
 
-                    <!-- HOTEL VIEW - OVERVIEW -->
+                        <!-- USER REVIEWS STARTS -->
+                        <figure class="user-reviews">
+                            <!-- REVIEW 1 STARTS -->
+                            <figure class="review">
+                                <!-- HOLDS THE USER REVIEW TEXT -->
+                                <blockquote class="review__text">
+                                    A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. 
+                                    I am alone, and feel the charm of 
+                                    existence in this spot, which was created for the bliss of souls like mine.
+                                </blockquote>
+                                <!-- HOLDS THE USER INFO THAT POSTED THE REVIEW -->
+                                <figcaption class="review__user">
+                                    <img src="resources/images/user-1.jpg" alt="User 1" class="review__photo">
+                                    <div class="review__user-box">
+                                        <p class="review__user-name">Nick Smith</p>
+                                        <p class="review__user-date">February 23rd, 2018</p>
+                                    </div>
+                                    <div class="review__rating">7.8</div>
+                                </figcaption>
+                            </figure>
+                            <!-- REVIEW 1 ENDS -->
+
+                            <!-- REVIEW 2 STARTS -->
+                            <figure class="review">
+                                    <!-- HOLDS THE USER REVIEW TEXT -->
+                                    <blockquote class="review__text">
+                                        A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. 
+                                        I am alone, and feel the charm of 
+                                        existence in this spot, which was created for the bliss of souls like mine.
+                                    </blockquote>
+                                    <!-- HOLDS THE USER INFO THAT POSTED THE REVIEW -->
+                                    <figcaption class="review__user">
+                                        <img src="resources/images/user-2.jpg" alt="User 2" class="review__photo">
+                                        <div class="review__user-box">
+                                            <p class="review__user-name">Mary Thomas</p>
+                                            <p class="review__user-date">Jun 7th, 2018</p>
+                                        </div>
+                                        <div class="review__rating">9.6</div>
+                                    </figcaption>
+                                </figure>
+
+                                <!-- SHOW ALL REVIEWS BUTTON -->
+                                <button class="btn-inline">Show all <span class="btn-inline__span">&rarr;</span></button>
+                                <!-- REVIEW 2 ENDS -->
+                        </figure>
+                    </div>
+                        <!-- USER REVIEWS ENDS -->
+
+                        <!-- CALL TO ACTION -->
+                        <div class="cta">
+                            <h2 class="cta__book-now">Good News! We Have 4 Free Room For Your Selected Dates!</h2>
+                            <button class="btn">
+                                <span class="btn__visible">Book Now</span>
+                                <span class="btn__invisible">Only 4 Room Left</span>
+                            </button>
+                        </div>
+
                 </main>
             </div>
-            <!-- SIDEBAR NAVIGATION ENDS -->
         </div>
     </body>
 
